--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.1.3",
     "date-diff": "^1.0.2",
     "date-fns": "^2.28.0",
+    "dotenv": "^16.0.0",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.21",
     "material-ui-confirm": "^2.1.4",
