--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-REACT_APP_HOST_API_KEY=http://localhost:57143
-<!-- REACT_APP_HOST_API_KEY=/WS_Local_Kishurit -->
-REACT_APP_HOST_SIGNALR_KEY=http://localhost:57142
-<!-- REACT_APP_HOST_SIGNALR_KEY=http://10.0.0.115/WS_Local_Kishurit -->
+REACT_APP_HOST_API_KEY=http://localhost:57143/
+# REACT_APP_HOST_API_KEY=http://10.0.0.115/WS_Local_Kishurit/WS_Local_Kishurit
+#REACT_APP_HOST_API_KEY=http://10.0.0.115:8081
+REACT_APP_HOST_SIGNALR_KEY=http://localhost:57142/
+#REACT_APP_HOST_SIGNALR_KEY=http://10.0.0.115/WS_Local_Kishurit/signalr_hub
+#REACT_APP_HOST_SIGNALR_KEY=http://10.0.0.115:8082
+
