--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/icons-material": "^5.3.1",
     "@mui/material": "^5.2.5",
     "@mui/styles": "^5.4.2",
+    "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -28,6 +29,7 @@
     "react-blink-tag": "^0.1.6",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.6",
     "react-iframe": "^1.8.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
@@ -43,6 +45,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "build:dev": "env-cmd -f dev.env react-scripts build",
+    "build:prod": "env-cmd -f prod.env react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -64,5 +68,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://10.0.0.115/UrgentScreen/"
+  "homepage": ".",
+  "devDependencies": {
+    "env-cmd": "^10.1.0"
+  }
 }
